# rickshaw

./: .env.example  .gitignore  FUTURE.md  LICENSE  README.md  pyproject.toml
examples/: offline_demo.py
prd/: DRAFT-tui-claude-codex-feel-20260707-1532.md  PRD-tui-claude-codex-feel-20260707-1532.md
rickshaw/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  settings.py  tool_registry.py  trace_render.py  tui.py  worker.py
rickshaw/memory/: _chroma_index.py  _vec_index.py  embedder.py  service.py  store.py  tools.py
rickshaw/memory/models/potion-base-4M/: config.json
rickshaw/ontology/: __init__.py  concept_matcher.py  schema.py
rickshaw/prompt/: builder.py
rickshaw/providers/: __init__.py  _bridge.py  anthropic_provider.py  base.py  build.py  devin_provider.py  factory.py  openai_provider.py
rickshaw_ai/: _builtins.py  tools.py
rickshaw_ai/auth/: resolver.py
rickshaw_ai/credentials/: store.py
rickshaw_ai/providers/: anthropic.py  openai_compatible.py
tests/: test_build_provider.py  test_cli.py  test_factory.py  test_memory.py  test_ontology.py  test_orchestrator.py  test_prompt_builder.py  test_providers.py  test_settings.py  test_tool_registry.py  test_trace_render.py  test_tui.py  test_worker.py
tests/rickshaw_ai/: test_auth.py  test_credentials.py  test_openai_adapter.py
