[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rickshaw"
version = "0.1.0"
description = "A multi-LLM provider harness with normalized interfaces and effort levels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
rickshaw = "rickshaw.cli:main"

[tool.setuptools.packages.find]
include = ["rickshaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
